--- a/src/public/quiz/kuizy.css
+++ b/src/public/quiz/kuizy.css
@@ -22,7 +22,7 @@ ul {
     width: 100%;
     margin: 0 auto;
     max-width: 650px;
-    padding-top: 60px;
+    /* padding-top: 60px; */
 }
 
 /* ヘッダーの見た目 */
